--- a/app/styles/scss/pages/index.scss
+++ b/app/styles/scss/pages/index.scss
@@ -1,5 +1,5 @@
 #header {
-    background: url("/Harvest/app/images/bg.jpg");
+    background: url("/images/bg.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -7,8 +7,20 @@
     min-height: 1200px;
 
     #navigation{
-        width: 100%;
-        min-height: 70px;
-        background: $black-1;
+      width: 100%;
+      min-height: 80px;
+      background: $black-1;
+      opacity: 0.8;
+      position: fixed;
+
+      .navbar-header{
+        .navbar-brand{
+          font-size: 2em;
+          font-family: $font-family;
+          font-weight: bold;
+          color: $white;
+          text-decoration: none;
+        }
+      }
     }
 }
