--- a/app/styles/scss/pages/index.scss
+++ b/app/styles/scss/pages/index.scss
@@ -1,3 +1,6 @@
+body{
+  font-size: 14px;
+}
 #header {
     background: url("/images/bg.jpg");
     background-position: center;
@@ -10,7 +13,7 @@
       width: 100%;
       min-height: 80px;
       background: $black-1;
-      opacity: 0.8;
+      opacity: 0.7;
       position: fixed;
 
       .navbar-header{
