--- a/app/styles/scss/pages/index.scss
+++ b/app/styles/scss/pages/index.scss
@@ -1,5 +1,11 @@
 body{
   font-size: 14px;
+  .h1-default{
+    font-size: 2em;
+    font-family: $font-family;
+    color: #fff;
+    text-align: center;
+  }
 }
 #header {
     background: url("/images/bg.jpg");
@@ -13,7 +19,7 @@ body{
       width: 100%;
       min-height: 80px;
       background: $black-1;
-      opacity: 0.7;
+      opacity: 0.5;
       position: fixed;
 
       .navbar-header{
